Se agregaron las vistas vacias con los redireccionamientos

--- a/App_Front/app.json
+++ b/App_Front/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "App_Front",
-    "slug": "App_Front",
+    "name": "appFinal",
+    "slug": "appFinal",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
