--- a/App_Back/package.json
+++ b/App_Back/package.json
@@ -1,21 +1,28 @@
 {
   "type": "module",
-  "name": "app_back",
+  "name": "modulo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/main.js",
+    "uploadRecipe": "node test/TestCase_UploadRecipe.js",
+    "weeklyRecepie": "node test/TestCase_GetWeekPlan.js",
+    "pdfMaker": "node test/TestCase_GetBuyList.js",
+    "tomi": "node test/TestCase_UploadRecipe.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cross-blob": "^2.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.8"
-  },
-  "devDependencies": {
-    "mocha": "^8.4.0"
+    "form-data": "^4.0.0",
+    "formidable": "^1.2.2",
+    "handlebars": "^4.7.7",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.2",
+    "pdfmake": "^0.1.71"
   }
 }
