--- a/App_Back/package.json
+++ b/App_Back/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cross-blob": "^2.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "formidable": "^1.2.2",
