--- a/App_Back/.env
+++ b/App_Back/.env
@@ -1,2 +1,2 @@
 CNX_STR=mongodb+srv://tomylalanne:tomas4264@recetappdb.itbyc.mongodb.net/RecetappDB?retryWrites=true&w=majority
-MODE=PROD
+MODE=TEST
